<resources>
    <string name="app_name">Lets Get Placed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_admingridview">Admingridview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>


    <string name="content_description_open_drawer">Open Drawer</string>
    <string name="content_description_close_drawer">Closed Drawer</string>

    <string name="steps">Steps</string>

    <string name="navigation_personal_info">Personal Info</string>
    <string name="navigation_essentials">Essentials</string>
    <string name="navigation_projects">Projects</string>
    <string name="navigation_education">Schools</string>
    <string name="navigation_experience">Experience</string>
    <string name="navigation_awards">Awards</string>
    <string name="navigation_preview">Preview</string>

    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_print">Print</string>

    <string name="hint_project_name">Project Name</string>
    <string name="hint_detail">Detail</string>
    <string name="hint_subtitle">Subtitle</string>
    <string name="hint_description">Description</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_job_title">Job Title</string>
    <string name="hint_name">Name</string>
    <string name="hint_address_line1">Address line1</string>
    <string name="hint_address_line2">Address line2</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_school_name">School Name</string>
    <string name="hint_degree">Degree</string>
    <string name="hint_skills">Skills</string>
    <string name="hint_languages">Languages</string>

    <string name="message_empty_list">This is empty list</string>

    <string name="symbol_separator" translatable="false">ㅡ</string>
    <string name="education">Education</string>
    <string name="tvBodyofNotification">strings1</string>
    <string name="name">Name:</string>
    <string name="contact">Contact:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="cgpi">Cgpi:</string>
    <string name="branch">Branch:</string>
    <string name="SSC">SSC(%):</string>
    <string name="HSC">HSC(%):</string>
    <string name="Diploma">Diploma(%):</string>


</resources>
